--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<h1>🎵 Soundbar Application 🎵</h1>
+
+  <!-- Buttons container -->
+  <div id="buttons"></div>
+
+  <!-- Stop button -->
+  <button class="stop">Stop</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
