--- a/main.html
+++ b/main.html
@@ -8,15 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div id="buttons"></div>
+  <button class="stop">stop</button>
 
-	<h1>🎵 Soundbar Application 🎵</h1>
+  <!-- Add hidden audio elements -->
+  <div id="audios"></div>
 
-  <!-- Buttons container -->
-  <div id="buttons"></div>
-
-  <!-- Stop button -->
-  <button class="stop">Stop</button>
-    <script type="text/javascript" src="./script.js">
+  <script src="script.js"></script>
 </script>
 
 </body>
